@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 1996-8 Michael R. Elkins <me@cs.hmc.edu>
- * Copyright (C) 1998 Thomas Roessler <roessler@guug.de>
+ * Copyright (C) 1998-9 Thomas Roessler <roessler@guug.de>
  * 
  *     This program is free software; you can redistribute it and/or modify
  *     it under the terms of the GNU General Public License as published by
@@ -50,70 +50,82 @@
 #define LONG_STRING 1024
 #define MAXLOCKATTEMPT 5
 
-#define strfcpy(A,B,C) strncpy(A,B,C), *(A+(C)-1)=0
+#define strfcpy(A,B,C) strncpy (A,B,C), *(A+(C)-1)=0
 
-static short f_try = 0;
-static short f_force = 0;
-static short f_unlock = 0;
-static int   Retry = MAXLOCKATTEMPT;
+static int DotlockFlags;
+static int Retry = MAXLOCKATTEMPT;
 
 static char *Hostname;
 
-static int dotlock_deference_symlink(char *, size_t, const char *);
-static int dotlock_prepare(char *, size_t, const char *);
+static int dotlock_deference_symlink (char *, size_t, const char *);
+static int dotlock_prepare (char *, size_t, const char *);
+static int dotlock_check_stats (struct stat *, struct stat *);
+static int dotlock_dispatch (const char *);
 
-static void usage(const char *);
+static void usage (const char *);
 
-static void dotlock_expand_link(char *, const char *, const char *);
+static void dotlock_expand_link (char *, const char *, const char *);
 
 /* These functions work on the current directory.
- * Invoke dotlock_prepare() before and check their
+ * Invoke dotlock_prepare () before and check their
  * return value.
  */
 
-static int dotlock_try(void);
-static int dotlock_unlock(const char *);
-static int dotlock_lock(const char *);
+static int dotlock_try (void);
+static int dotlock_unlock (const char *);
+static int dotlock_unlink (const char *);
+static int dotlock_lock (const char *);
 
 
-int main(int argc, char **argv)
+#define check_flags(a) if (a & DL_FL_ACTIONS) usage (argv[0])
+
+int main (int argc, char **argv)
 {
   int i;
   char *p;
-  const char *f;
   struct utsname utsname;
-  char realpath[_POSIX_PATH_MAX];
 
   /* determine the system's host name */
   
-  uname(&utsname);
-  if(!(Hostname = strdup(utsname.nodename)))
+  uname (&utsname);
+  if (!(Hostname = strdup (utsname.nodename)))
     return DL_EX_ERROR;
-  if((p = strchr(Hostname, '.')))
+  if ((p = strchr (Hostname, '.')))
     *p = '\0';
 
 
   /* parse the command line options. */
+  DotlockFlags = 0;
   
-  while((i = getopt(argc, argv, "tfupr:")) != EOF)
+  while ((i = getopt (argc, argv, "dtfur:")) != EOF)
   {
-    switch(i)
+    switch (i)
     {
-      case 't': f_try = 1; break;
-      case 'f': f_force = 1; break;
-      case 'u': f_unlock = 1; break;
-      case 'r': Retry = atoi(optarg); break;
-      default: usage(argv[0]);
+      /* actions, mutually exclusive */
+      case 't': check_flags (DotlockFlags); DotlockFlags |= DL_FL_TRY; break;
+      case 'd': check_flags (DotlockFlags); DotlockFlags |= DL_FL_UNLINK; break;
+      case 'u': check_flags (DotlockFlags); DotlockFlags |= DL_FL_UNLOCK; break;
+
+      /* other flags */
+      case 'f': DotlockFlags |= DL_FL_FORCE; break;
+      case 'r': DotlockFlags |= DL_FL_RETRY; Retry = atoi (optarg); break;
+      
+      default: usage (argv[0]);
     }
   }
 
-  if(optind == argc || f_try + f_force + f_unlock > 1 || Retry < 0)
-    usage(argv[0]);
-  
-  f = argv[optind];
+  if (optind == argc || Retry < 0)
+    usage (argv[0]);
+
+  return dotlock_dispatch (argv[optind]);
+}
 
 
-  /* If dotlock_prepare() succeeds [return value == 0],
+static int dotlock_dispatch (const char *f)
+{
+  char realpath[_POSIX_PATH_MAX];
+
+  /* If dotlock_prepare () succeeds [return value == 0],
    * realpath contains the basename of f, and we have
    * successfully changed our working directory to
    * `dirname $f`.  Additionally, f has been opened for
@@ -123,20 +135,22 @@ int main(int argc, char **argv)
    * For a more detailed explanation of all this, see the
    * lengthy comment below.
    */
-  
-  if(dotlock_prepare(realpath, sizeof(realpath), f) != 0)
+
+  if (dotlock_prepare (realpath, sizeof (realpath), f) != 0)
     return DL_EX_ERROR;
 
-  /* Finally, actually perform the locking operation. */
-  
-  if(f_try)
-    return dotlock_try();
-  else if(f_unlock)
-    return dotlock_unlock(realpath);
-  else /* lock */
-    return dotlock_lock(realpath);
+  /* Actually perform the locking operation. */
 
+  if (DotlockFlags & DL_FL_TRY)
+    return dotlock_try ();
+  else if (DotlockFlags & DL_FL_UNLOCK)
+    return dotlock_unlock (realpath);
+  else if (DotlockFlags & DL_FL_UNLINK)
+    return dotlock_unlink (realpath);
+  else /* lock */
+    return dotlock_lock (realpath);
 }
+
 
 /*
  * Usage information.
@@ -146,19 +160,19 @@ int main(int argc, char **argv)
  */
 
 static void 
-usage(const char *av0)
+usage (const char *av0)
 {
-  fprintf(stderr, "usage: %s [-t|-f|-u] [-r <retries>] file\n",
-	  av0);
+  fprintf (stderr, "usage: %s [-t|-f|-u|-d] [-r <retries>] file\n", av0);
 
-  fputs("\noptions:"
+  fputs ("\noptions:"
 	"\n  -t\t\ttry"
 	"\n  -f\t\tforce"
 	"\n  -u\t\tunlock"
+	"\n  -d\t\tunlink"
 	"\n  -r <retries>\tRetry locking"
 	"\n", stderr);
   
-  exit(DL_EX_ERROR);
+  exit (DL_EX_ERROR);
 }
 
 
@@ -166,7 +180,7 @@ usage(const char *av0)
  * Access checking: Let's avoid to lock other users' mail
  * spool files if we aren't permitted to read them.
  * 
- * Some simple-minded access(2) checking isn't sufficient
+ * Some simple-minded access (2) checking isn't sufficient
  * here: The problem is that the user may give us a
  * deeply nested path to a file which has the same name
  * as the file he wants to lock, but different
@@ -174,7 +188,7 @@ usage(const char *av0)
  * /tmp/lots/of/subdirs/var/spool/mail/root.
  * 
  * He may then try to replace /tmp/lots/of/subdirs by a
- * symbolic link to / after we have invoked access() to
+ * symbolic link to / after we have invoked access () to
  * check the file's permissions.  The lockfile we'd
  * create or remove would then actually be
  * /var/spool/mail/root.
@@ -182,7 +196,7 @@ usage(const char *av0)
  * To avoid this attack, we proceed as follows:
  * 
  * - First, follow symbolic links a la
- *   dotlock_deference_symlink().
+ *   dotlock_deference_symlink ().
  * 
  * - get the result's dirname.
  * 
@@ -195,7 +209,7 @@ usage(const char *av0)
  *   subsequent lstat (only using the basename).  If
  *   the comparison fails, bail out.
  * 
- * dotlock_prepare() is invoked from main() directly
+ * dotlock_prepare () is invoked from main () directly
  * after the command line parsing has been done.
  *
  * Return values:
@@ -211,7 +225,34 @@ usage(const char *av0)
  */
 
 static int
-dotlock_prepare(char *bn, size_t l, const char *f)
+dotlock_check_stats (struct stat *fsb, struct stat *lsb)
+{
+  /* S_ISLNK (fsb->st_mode) should actually be impossible,
+   * but we may have mixed up the parameters somewhere.
+   * play safe.
+   */
+
+  if (S_ISLNK (lsb->st_mode) || S_ISLNK (fsb->st_mode))
+    return -1;
+  
+  if ((lsb->st_dev != fsb->st_dev) ||
+     (lsb->st_ino != fsb->st_ino) ||
+     (lsb->st_mode != fsb->st_mode) ||
+     (lsb->st_nlink != fsb->st_nlink) ||
+     (lsb->st_uid != fsb->st_uid) ||
+     (lsb->st_gid != fsb->st_gid) ||
+     (lsb->st_rdev != fsb->st_rdev) ||
+     (lsb->st_size != fsb->st_size))
+  {
+    /* something's fishy */
+    return -1;
+  }
+  
+  return 0;
+}
+
+static int
+dotlock_prepare (char *bn, size_t l, const char *f)
 {
   struct stat fsb, lsb;
   char realpath[_POSIX_PATH_MAX];
@@ -220,10 +261,10 @@ dotlock_prepare(char *bn, size_t l, const char *f)
   int fd;
   int r;
   
-  if(dotlock_deference_symlink(realpath, sizeof(realpath), f) == -1)
+  if (dotlock_deference_symlink (realpath, sizeof (realpath), f) == -1)
     return -1;
   
-  if((p = strrchr(realpath, '/')))
+  if ((p = strrchr (realpath, '/')))
   {
     *p = '\0';
     basename = p + 1;
@@ -235,42 +276,29 @@ dotlock_prepare(char *bn, size_t l, const char *f)
     dirname = ".";
   }
 
-  if(strlen(basename) + 1 > l)
+  if (strlen (basename) + 1 > l)
     return -1;
   
-  strfcpy(bn, basename, l);
+  strfcpy (bn, basename, l);
   
-  if(chdir(dirname) == -1)
+  if (chdir (dirname) == -1)
     return -1;
   
-  if((fd = open(basename, O_RDONLY)) == -1)
+  if ((fd = open (basename, O_RDONLY)) == -1)
     return -1;
   
-  r = fstat(fd, &fsb);
-  close(fd);
+  r = fstat (fd, &fsb);
+  close (fd);
   
-  if(r == -1)
+  if (r == -1)
     return -1;
   
-  if(lstat(basename, &lsb) == -1)
+  if (lstat (basename, &lsb) == -1)
     return -1;
-  
-  if(S_ISLNK(lsb.st_mode))
+
+  if (dotlock_check_stats (&fsb, &lsb) == -1)
     return -1;
-  
-  if((lsb.st_dev != fsb.st_dev) ||
-     (lsb.st_ino != fsb.st_ino) ||
-     (lsb.st_mode != fsb.st_mode) ||
-     (lsb.st_nlink != fsb.st_nlink) ||
-     (lsb.st_uid != fsb.st_uid) ||
-     (lsb.st_gid != fsb.st_gid) ||
-     (lsb.st_rdev != fsb.st_rdev) ||
-     (lsb.st_size != fsb.st_size))
-  {
-    /* something's fishy */
-    return -1;
-  }
-  
+
   return 0;
 }
 
@@ -316,43 +344,43 @@ dotlock_expand_link (char *newpath, const char *path, const char *link)
  */
 
 static int
-dotlock_deference_symlink(char *d, size_t l, const char *path)
+dotlock_deference_symlink (char *d, size_t l, const char *path)
 {
   struct stat sb;
   char realpath[_POSIX_PATH_MAX];
   const char *pathptr = path;
   int count = 0;
   
-  while(count++ < MAXLINKS)
+  while (count++ < MAXLINKS)
   {
-    if(lstat(pathptr, &sb) == -1)
+    if (lstat (pathptr, &sb) == -1)
     {
-      /* perror(pathptr); */
+      /* perror (pathptr); */
       return -1;
     }
     
-    if(S_ISLNK (sb.st_mode))
+    if (S_ISLNK (sb.st_mode))
     {
       char linkfile[_POSIX_PATH_MAX];
       char linkpath[_POSIX_PATH_MAX];
       int len;
 
-      if((len = readlink(pathptr, linkfile, sizeof(linkfile))) == -1)
+      if ((len = readlink (pathptr, linkfile, sizeof (linkfile))) == -1)
       {
-	/* perror(pathptr); */
+	/* perror (pathptr); */
 	return -1;
       }
       
       linkfile[len] = '\0';
-      dotlock_expand_link(linkpath, pathptr, linkfile);
-      strfcpy(realpath, linkpath, sizeof(realpath));
+      dotlock_expand_link (linkpath, pathptr, linkfile);
+      strfcpy (realpath, linkpath, sizeof (realpath));
       pathptr = realpath;
     }
     else
       break;
   }
 
-  strfcpy(d, pathptr, l);
+  strfcpy (d, pathptr, l);
   return 0;
 }
 
@@ -361,14 +389,14 @@ dotlock_deference_symlink(char *d, size_t l, const char *path)
  * 
  * realpath is assumed _not_ to be an absolute path to
  * the file we are about to lock.  Invoke
- * dotlock_prepare() before using this function!
+ * dotlock_prepare () before using this function!
  * 
  */
 
 #define HARDMAXATTEMPTS 10
 
 static int
-dotlock_lock(const char *realpath)
+dotlock_lock (const char *realpath)
 {
   char lockfile[_POSIX_PATH_MAX + LONG_STRING];
   char nfslockfile[_POSIX_PATH_MAX + LONG_STRING];
@@ -379,11 +407,11 @@ dotlock_lock(const char *realpath)
   struct stat sb;
   time_t t;
   
-  sprintf(nfslockfile, "%s.%s.%d", realpath, Hostname, (int) getpid());
-  sprintf(lockfile, "%s.lock", realpath);
+  sprintf (nfslockfile, "%s.%s.%d", realpath, Hostname, (int) getpid ());
+  sprintf (lockfile, "%s.lock", realpath);
 
   
-  unlink(nfslockfile);
+  unlink (nfslockfile);
 
   while ((fd = open (nfslockfile, O_WRONLY | O_EXCL | O_CREAT, 0)) < 0)
   {
@@ -396,52 +424,52 @@ dotlock_lock(const char *realpath)
 
 
   
-  close(fd);
+  close (fd);
   
   while (hard_count++ < HARDMAXATTEMPTS)
   {
-    link(nfslockfile, lockfile);
+    link (nfslockfile, lockfile);
 
-    if(stat(nfslockfile, &sb) != 0)
+    if (stat (nfslockfile, &sb) != 0)
     {
-      /* perror("stat"); */
+      /* perror ("stat"); */
       return DL_EX_ERROR;
     }
 
-    if(sb.st_nlink == 2)
+    if (sb.st_nlink == 2)
       break;
 
-    if(count == 0)
+    if (count == 0)
       prev_size = sb.st_size;
 
-    if(prev_size == sb.st_size && ++count > Retry)
+    if (prev_size == sb.st_size && ++count > Retry)
     {
-      if(f_force)
+      if (DotlockFlags & DL_FL_FORCE)
       {
-	unlink(lockfile);
+	unlink (lockfile);
 	count = 0;
 	continue;
       }
       else
       {
-	unlink(nfslockfile);
+	unlink (nfslockfile);
 	return DL_EX_EXIST;
       }
     }
     
     prev_size = sb.st_size;
     
-    /* don't trust sleep(3) as it may be interrupted
+    /* don't trust sleep (3) as it may be interrupted
      * by users sending signals. 
      */
     
-    t = time(NULL);
+    t = time (NULL);
     do {
-      sleep(1);
-    } while (time(NULL) == t);
+      sleep (1);
+    } while (time (NULL) == t);
   }
   
-  unlink(nfslockfile);
+  unlink (nfslockfile);
 
   return DL_EX_OK;
 }
@@ -450,38 +478,57 @@ dotlock_lock(const char *realpath)
 /*
  * Unlock a file. 
  * 
- * The same comment as for dotlock_lock() applies here.
+ * The same comment as for dotlock_lock () applies here.
  * 
  */
 
 static int
-dotlock_unlock(const char *realpath)
+dotlock_unlock (const char *realpath)
 {
   char lockfile[_POSIX_PATH_MAX + LONG_STRING];
   int i;
 
   sprintf (lockfile, "%s.lock", realpath);
   
-  i = unlink(lockfile);
+  i = unlink (lockfile);
   
-  if(i == -1)
+  if (i == -1)
     return DL_EX_ERROR;
   
   return DL_EX_OK;
+}
+
+/* remove an empty file */
+
+static int
+dotlock_unlink (const char *realpath)
+{
+  struct stat lsb;
+  int i = -1;
+
+  if (dotlock_lock (realpath) != DL_EX_OK)
+    return DL_EX_ERROR;
+
+  if ((i = lstat (realpath, &lsb)) == 0 && lsb.st_size == 0)
+    unlink (realpath);
+
+  dotlock_unlock (realpath);
+
+  return (i == 0) ?  DL_EX_OK : DL_EX_ERROR;
 }
 
 
 /*
  * Check if a file can be locked at all.
  * 
- * The same comment as for dotlock_lock() applies here.
+ * The same comment as for dotlock_lock () applies here.
  * 
  */
 
 static int
-dotlock_try(void)
+dotlock_try (void)
 {
-  if(access(".", W_OK) == 0)
+  if (access (".", W_OK) == 0)
     return DL_EX_OK;
 
   return DL_EX_IMPOSSIBLE;
