@@ -25,17 +25,16 @@
 #define DL_EX_OK	0	
 #define DL_EX_ERROR	1	
 #define DL_EX_EXIST	3	
-#define DL_EX_NEED_PRIVS 4
 #define DL_EX_IMPOSSIBLE 5
 
 /* flags */
 
 #define DL_FL_TRY	(1 << 0)
 #define DL_FL_UNLOCK	(1 << 1)
-#define DL_FL_USEPRIV	(1 << 2)
 #define DL_FL_FORCE	(1 << 3)
 #define DL_FL_RETRY	(1 << 4)
+#define DL_FL_UNLINK	(1 << 5)
 
-int dotlock_invoke(const char *, int, int);
+#define DL_FL_ACTIONS (DL_FL_TRY|DL_FL_UNLOCK|DL_FL_UNLINK)
 
 #endif
