@@ -2,8 +2,9 @@ lbdb (0.18.3) unstable; urgency=low
 
   * Make dotlock.c more portable.
   * Make Makefile.in much more portable.
+  * Merge in changes of dotlock program from Mutt 0.96.6.
 
- -- Roland Rosenfeld <roland@debian.org>  Thu,  2 Sep 1999 19:20:32 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Fri,  3 Sep 1999 13:17:24 +0200
 
 lbdb (0.18.2) unstable; urgency=low
 
